--- a/src/ghosts/.gitignore
+++ b/src/ghosts/.gitignore
@@ -23,3 +23,6 @@
 /BlindGhost.class
 /HuntBlindGhost.class
 /ScatterBlindGhost.class
+/CopyGhost.class
+/HuntCopyGhost.class
+/ScatterCopyGhost.class
