tryhard top show

--- a/src/ghosts/.gitignore
+++ b/src/ghosts/.gitignore
@@ -26,3 +26,6 @@
 /CopyGhost.class
 /HuntCopyGhost.class
 /ScatterCopyGhost.class
+/TryhardGhost.class
+/HuntTryhardGhost.class
+/ScatterTryhardGhost.class
