--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /bin/
+.metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
+.metadata/.plugins/org.eclipse.jdt.core/index.db
+.metadata/.lock
