--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
 .metadata/.plugins/org.eclipse.jdt.core/index.db
 .metadata/.lock
+*.xml
